--- a/paper.tex
+++ b/paper.tex
@@ -19,7 +19,6 @@
 }
 \email{manuel.alabor@ost.ch}
 
-
 \begin{document}
 
 \begin{abstract}
@@ -44,6 +43,7 @@
 
 \section{Introduction}
 \label{sec:intro}
+
 
 \begin{itemize}
 	\item Intro on topic
@@ -81,15 +81,25 @@
 \end{itemize}
 
 
-\section{User Test}
+\section{Usability Test}
 
-\begin{itemize}
-	\item Why? Validate prototype, validate cognitive walkthrough results, gain further insight on actual user behavior (Did we solve the problem? Did we create new ones?)
-	\item Study Design
-	\item Execution
-	\item Results
-	\item Interpretation
-\end{itemize}
+
+
+With the
+
+Why? Validate prototype, validate cognitive walkthrough results, gain further insight on actual user behavior (Did we solve the problem? Did we create new ones?)
+
+\subsection{Study Design}
+
+
+\subsection{Study Execution}
+
+
+
+\subsection{Results}
+
+\subsection{Interpretation}
+Compare/Discuss with Observational Study
 
 \section{Future Work}
 \label{sec:future}
@@ -118,7 +128,7 @@ This study is subject to the following threats and limitations:
 \end{itemize}
 
 % \begin{acks}
-% 	We would like to thank Prof. Dr. Markus Stolze for his mentorship and many tireless review sessions.
+% 	We would like to thank Prof. Dr. Markus Stolze for his mentorship and many tireless review sessions. Further,
 % \end{acks}
 
 \section*{License}
@@ -130,7 +140,7 @@ This study is subject to the following threats and limitations:
 \bibliography{bibliography}
 
 
-\section{Persona ``Roger Flow''}
+\section{Persona ``Frank Flow''}
 \label{sec:persona}
 
 \subsection{Profile}
@@ -138,12 +148,12 @@ This study is subject to the following threats and limitations:
 	\item Age: 29 years
 	\item Gender: Male
 	\item Education: BSc in Computer Science
-	\item Occupation: Frontend Software Engineer at Foobank
+	\item Occupation: Frontend Software Engineer at ReactiBank
 \end{itemize}
 
-Roger started to work for Foobank 2 years ago as a frontend software engineer. As part of a small, interdisciplinary team of 7 people, Roger' and his team are responsible for developing and maintaining a trading application. This application relies heavily on real-time data, so the group decided to use reactive programming principles throughout the application. Roger knows traditional programming paradigms and the related debugging tools from his studies and personal experiences. He built up knowledge on RP and RxJS for the frontend part of their application after joining the team quickly, however.
+Frank started to work for ReactiBank 2 years ago as a frontend software engineer. As part of a small, interdisciplinary team of 7 people, Frank' and his team are responsible for developing and maintaining a trading application. This application relies heavily on real-time data, so the group decided to use reactive programming principles throughout the application. Frank knows traditional programming paradigms and the related debugging tools from his studies and personal experiences. He built up knowledge on RP and RxJS for the frontend part of their application after joining the team quickly, however.
 
-Today, Roger uses RxJS efficiently to build new features. He can solve simple problems reported by the product owner on his own. Working on more complicated issues is still something Roger struggles with: He often feels like his knowledge of traditional programming techniques and its debugging utilities are not enough. These tools feel "out of place" to him and do not provide the answers he is looking for. Roger does not like that, eventually, he has to consult one of his colleagues who have experience in RxJS for a longer time.
+Today, Frank uses RxJS efficiently to build new features. He can solve simple problems reported by the product owner on his own. Working on more complicated issues is still something Frank struggles with: He often feels like his knowledge of traditional programming techniques and its debugging utilities are not enough. These tools feel "out of place" to him and do not provide the answers he is looking for. Frank does not like that, eventually, he has to consult one of his colleagues who have experience in RxJS for a longer time.
 
 \subsection{Goals}
 \begin{itemize}
@@ -167,7 +177,7 @@ Today, Roger uses RxJS efficiently to build new features. He can solve simple pr
 This cognitive walkthrough is based on the first problem given to subjects during the observational study of our previous work ``Debugging RxJS-based Applications''\cite{TODO}.
 
 \subsubsection{User}
-See Appendix~\ref{sec:persona} ``Persona Roger Flow''
+See Appendix~\ref{sec:persona} ``Persona Frank Flow''
 
 \subsubsection{Task}
 
@@ -309,7 +319,7 @@ Execute ``Problem~1'' launch configuration
 	\centering
 	\includegraphics[width=\columnwidth]{walkthrough-screenshots/step6.png}
 	\Description{}
-	\caption{Visual Studi Code showing the debugging view after launching ``Problem~1''.}
+	\caption{Visual Studio Code showing the debugging view after launching ``Problem~1''.}
 	\label{fig:walkthrough-screesnhot-step-6}
 \end{figure}
 
