--- a/paper.tex
+++ b/paper.tex
@@ -44,6 +44,27 @@
 \section{Introduction}
 \label{sec:intro}
 
+Why this topic? Why is it relevant?
+Why am i the right guy to talk about this?
+Why should you listen to me?
+
+Yes
+Yes
+Yes
+Yes
+Yes
+What?!
+
+XY et al. describe the ``process of debugging'' as a three-step, iterative process: Challenged with some potentially faulty computer program, a software engineer (i) formulates a hypothesis on what the reason for the unexpected behavior in the program could be. In the next step, (ii) the engineer uses whatever tools available to instrument the source code, aiming to confirm their hypothesis. Finally, they (iii) test their hypothesis: The instrumentation provides insight into the programs runtime behavior. If this new knowledge confirms the engineers hypothesis, they are done debugging and can start implementing a fix for the problem. Does the test result not support the engineers hypothesis, they will use the newly collected information to refine their current hypothesis. With this refined model, a new cycle of the debugging process is then started.
+
+The hypothesis in the first step of the described model is the pure result of a mental effort: The engineer uses whatever information they have at hand or have collected in earlier iterations, and formulate an idea on what the problem in the program could be.  
+
+
+A debugger is an essential utility in every software engineers tool box: With a debugger, the engineer can inspect a computer program during its runtime. They can evaluate and influence the program without even modifying the underlying source code.
+
+The process of
+
+
 
 \begin{itemize}
 	\item Intro on topic
